Fixed a minor overlap issue

--- a/TheSource.raw.css
+++ b/TheSource.raw.css
@@ -83,7 +83,7 @@ right: 0;
 .theme-dark .container-3gCOGc .headerBar-UHpsPw { border-left: 2px solid #1e2124; }
 .container-1UB9sr { border-bottom: 0; border-top: 2px solid #1e2124; padding-left: 6px; padding-top: 0; padding-bottom: 0; padding-right: 0; height: 34px; z-index: 1000; background: #2a2c31; }
 .button-2KyEfG { height: 34px; width: 18px; border-radius: 0; }
-.inner-btChU7 .rtc-connection-status { display: inline; }
+.inner-btChU7 .rtc-connection-status { display: flex; }
 .inner-btChU7 .channel-SEolQq { margin-right: 0; }
 .chat-3bRxxu .divider>span { line-height: 0; border-radius: 0; }
 .guildsError-b7zR5H { height: 20px; width: 20px; font-size: 15px; line-height: 15px; }
